test/Fail/UnquoteMissingDeclaration.err
UnquoteMissingDeclaration.agda:18.1-60: error: [Unquote.MissingDeclaration]
Missing declaration for id-ok
